syntax = "proto3";

package taskguild.v1;

import "google/protobuf/timestamp.proto";
import "taskguild/v1/common.proto";

service InteractionService {
  rpc ListInteractions(ListInteractionsRequest) returns (ListInteractionsResponse);
  rpc RespondToInteraction(RespondToInteractionRequest) returns (RespondToInteractionResponse);
  // ExpireInteraction sets a PENDING interaction to EXPIRED.
  rpc ExpireInteraction(ExpireInteractionRequest) returns (ExpireInteractionResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc SubscribeInteractions(SubscribeInteractionsRequest) returns (stream InteractionEvent);
}

enum InteractionType {
  INTERACTION_TYPE_UNSPECIFIED = 0;
  INTERACTION_TYPE_PERMISSION_REQUEST = 1;
  INTERACTION_TYPE_QUESTION = 2;
  INTERACTION_TYPE_NOTIFICATION = 3;
  INTERACTION_TYPE_USER_MESSAGE = 4;
}

enum InteractionStatus {
  INTERACTION_STATUS_UNSPECIFIED = 0;
  INTERACTION_STATUS_PENDING = 1;
  INTERACTION_STATUS_RESPONDED = 2;
  INTERACTION_STATUS_EXPIRED = 3;
}

message Interaction {
  // identity
  string id = 1;
  string task_id = 2;
  string agent_id = 3;

  // type & status
  InteractionType type = 4;
  InteractionStatus status = 5;

  // content
  string title = 6;
  string description = 7;
  repeated InteractionOption options = 8;
  string response = 9;

  // timestamps
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp responded_at = 11;
}

message InteractionOption {
  string label = 1;
  string value = 2;
  string description = 3;
}

message InteractionEvent {
  Interaction interaction = 1;
}

message ListInteractionsRequest {
  // filters
  string project_id = 1;
  string task_id = 2;
  InteractionStatus status_filter = 3;

  PaginationRequest pagination = 4;
}
message ListInteractionsResponse {
  repeated Interaction interactions = 1;
  PaginationResponse pagination = 2;
}

message RespondToInteractionRequest {
  string id = 1;
  string response = 2;
}
message RespondToInteractionResponse {
  Interaction interaction = 1;
}

message SendMessageRequest {
  string task_id = 1;
  string message = 2;
}
message SendMessageResponse {
  Interaction interaction = 1;
}

message SubscribeInteractionsRequest {
  string task_id = 1;
}

message ExpireInteractionRequest {
  string id = 1;
}
message ExpireInteractionResponse {
  Interaction interaction = 1;
}
